--- a/sw/CMakeLists.txt
+++ b/sw/CMakeLists.txt
@@ -306,7 +306,7 @@ endif()
 if(NOT ${PROJECT} MATCHES "coremark")
   set(COMPILER_LINKER_FLAGS "\
     -march=${CMAKE_SYSTEM_PROCESSOR} \
-    -w -O2 -g  -nostdlib  \
+    -w -Os -g  -nostdlib  \
     -ffunction-sections \
     -DHOST_BUILD \
     -D${CRT_TYPE} \
